# CLIzip

./: main.py  pyproject.toml
